#
# Copyright (C) 2013  Paulo Cesar Pereira de Andrade.
#
# This is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# This software is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# Authors:
#	Paulo Cesar Pereira de Andrade
#

AM_CFLAGS = @OWL_CFLAGS@

EXTRA_DIST =				\
	binarytrees			\
	binarytrees-output.txt		\
	chameneous-redux		\
	chameneosredux-output.txt	\
	fannkuch			\
	fannkuch-output.txt		\
	fasta				\
	fasta-output.txt		\
	mandelbrot			\
	mandelbrot-output.txt		\
	math				\
	pidigits			\
	pidigits-output.txt		\
	scan				\
	test
