#
# Copyright (C) 2013  Paulo Cesar Pereira de Andrade.
#
# This is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# This software is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# Authors:
#	Paulo Cesar Pereira de Andrade
#

AM_CFLAGS = @OWL_CFLAGS@

EXTRA_DIST =				\
	0.png				\
	1.png				\
	binarytrees			\
	binarytrees.c			\
	binarytrees-output.txt		\
	chameneos-redux			\
	chameneos-redux.c		\
	chameneosredux-output.txt	\
	fannkuch			\
	fannkuch.c			\
	fannkuch-output.txt		\
	fasta				\
	fasta.c				\
	fasta-output.txt		\
	mandelbrot			\
	mandelbrot.c			\
	mandelbrot-output.txt		\
	math				\
	nbody				\
	nbody.c				\
	nbody-output.txt		\
	pidigits			\
	pidigits.c			\
	pidigits-output.txt		\
	scan				\
	sdl				\
	spectral-norm			\
	spectral-norm.c			\
	spectral-norm-output.txt	\
	test				\
	threadring			\
	threadring.c			\
	threadring-output.txt
