#
# Copyright (C) 2013  Paulo Cesar Pereira de Andrade.
#
# This is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# This software is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# Authors:
#	Paulo Cesar Pereira de Andrade
#

AM_CFLAGS = @OWL_CFLAGS@

EXTRA_DIST =		\
	cqq.h		\
	obuiltin.h	\
	ocache.h	\
	ocfg.h		\
	ocode.h		\
	odata.h		\
	odebug.h	\
	odefs.h		\
	oemit.h		\
	oerror.h	\
	oeval.h		\
	ofunction.h	\
	ogl.h		\
	oglu.h		\
	ohash.h		\
	ohashtable.h	\
	omath.h		\
	oobject.h	\
	oparser.h	\
	orat.h		\
	oread.h		\
	orealize.h	\
	osdl.h		\
	ostream.h	\
	ostring.h	\
	osymbol.h	\
	otag.h		\
	othread.h	\
	otypes.h	\
	ovm.h		\
	owl.h		\
	owrite.h
