#
# Copyright (C) 2013  Paulo Cesar Pereira de Andrade.
#
# This is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# This software is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# Authors:
#	Paulo Cesar Pereira de Andrade
#

noinst_LTLIBRARIES = libowl.la
AM_CFLAGS = $(WARN_CFLAGS) $(DEBUG_CFLAGS) $(OWL_CFLAGS)

EXTRA_DIST =

libowl_la_SOURCES =	\
	cqq.c		\
	ocache.c	\
	ocfg.c		\
	ocode.c		\
	odata.c		\
	odebug.c	\
	oerror.c	\
	oemit.c		\
	oemit_unary.c	\
	oemit_binary.c	\
	oemit_cond.c	\
	oemit_except.c	\
	oemit_flow.c	\
	oeval.c		\
	ofunction.c	\
	ohash.c		\
	ohashtable.c	\
	omath.c		\
	oobject.c	\
	oparser.c	\
	orat.c		\
	oread.c		\
	orealize.c	\
	ostream.c	\
	ostring.c	\
	osymbol.c	\
	otag.c		\
	othread.c	\
	ovm.c		\
	ovm_void.c	\
	ovm_word.c	\
	ovm_float.c	\
	ovm_mpz.c	\
	ovm_rat.c	\
	ovm_mpq.c	\
	ovm_mpr.c	\
	ovm_cdd.c	\
	ovm_cqq.c	\
	ovm_mpc.c	\
	owrite.c
